--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
+    "eslint-plugin-flowtype": "^3.0.0",
+    "fibers": "^3.1.0",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "sass": "^1.26.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
