--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/form-serialize": "^0.7.1",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -13,6 +14,7 @@
     "@types/react-router-dom": "^5.1.3",
     "eslint-plugin-flowtype": "^3.0.0",
     "fibers": "^3.1.0",
+    "form-serialize": "^0.7.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
